# panel

.github/workflows/: build.yml
.sqlx/: query-79e364bdb0ba4eb4f104112c1a52dda1d35581813d8399791398ea336000d971.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/commands/: mod.rs
backend/src/commands/nest/: mod.rs
backend/src/routes/api/admin/egg_repositories/_egg_repository_/eggs/: install.rs
backend/src/routes/api/admin/nests/_nest_/eggs/: delete.rs  mod.rs  move.rs
backend/src/routes/api/client/account/: avatar.rs
frontend/: build-translations.mts  package.json  pnpm-lock.yaml
frontend/public/translations/: de-DE.json  en-US.json
frontend/src/: App.tsx  translations.ts  vite-env.d.ts
frontend/src/api/: axios.ts
frontend/src/api/admin/: getAdminActivity.ts
frontend/src/api/admin/assets/: getAssets.ts
frontend/src/api/admin/backup-configurations/: getBackupConfigurations.ts
frontend/src/api/admin/database-hosts/: getDatabaseHostDatabases.ts  getDatabaseHosts.ts
frontend/src/api/admin/egg-repositories/: getEggRepositories.ts
frontend/src/api/admin/locations/: getLocations.ts
frontend/src/api/admin/mounts/: getMounts.ts
frontend/src/api/admin/nests/: getNests.ts
frontend/src/api/admin/nodes/: getNodes.ts
frontend/src/api/admin/oauth-providers/: getOAuthProviders.ts
frontend/src/api/admin/roles/: getRoles.ts
frontend/src/api/admin/servers/: getServers.ts
frontend/src/api/admin/system/: getLatest.ts  getOverview.ts  getTelemetry.ts
frontend/src/api/me/: getUserActivity.ts
frontend/src/api/server/: getServerActivity.ts  getServers.ts
frontend/src/elements/: SelectionArea.tsx  Table.tsx
frontend/src/lib/: color.ts  ip.ts  server.ts  time.ts  version.ts
frontend/src/pages/oobe/: OobeConfiguration.tsx
frontend/src/plugins/: useBlocker.ts  useSearchablePageableTable.ts  useSearchableResource.ts
frontend/src/providers/: FileManagerProvider.tsx
frontend/src/providers/contexts/: fileManagerContext.ts  historyContext.ts
frontend/src/routers/: AdminRouter.tsx
frontend/src/routers/routes/: serverRoutes.ts
shared/src/models/: nest.rs  nest_egg.rs
shared/src/settings/: mod.rs
(+107 files in other folders)
