[package]
name = "panel-rs"
rust-version = { workspace = true }
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
wings-api = { workspace = true }
rule-validator = { workspace = true }
shared = { workspace = true }
database-migrator = { workspace = true }
extension-internal-list = { path = "../backend-extensions/internal-list" }
tracing = { workspace = true }
sentry = { workspace = true }
sentry-tower = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
colored = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
indexmap = { workspace = true }
tower-http = { version = "0.6.2", features = ["normalize-path"] }
reqwest = { workspace = true }
sha2 = { workspace = true }
image = "0.25.5"
tower-cookies = "0.11.0"
rand = { workspace = true }
futures-util = { workspace = true }
tower = "0.5.2"
include_dir = { workspace = true }
uuid = { workspace = true }
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
validator = { workspace = true }
russh = { workspace = true }
urlencoding = { workspace = true }
infer = "0.19.0"
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = "0.12.0"
cron = { workspace = true }
webauthn-rs = { workspace = true }
openssl = { version = "0.10.73", features = ["vendored"] }
base64 = "0.22.1"
rust-s3 = { workspace = true }
rustis = { workspace = true }
dotenvy = { workspace = true }
oauth2 = { workspace = true }
human_bytes = "0.4.3"
which = "8.0.0"
semver = { workspace = true }
compact_str = { workspace = true }
sysinfo = { workspace = true }
serde_with = { workspace = true }
minijinja = { workspace = true }
serde_norway = { workspace = true }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.6.0"
